--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Methods for synchronously parsing various data formats to JS objects.",
   "main": "index.js",
   "scripts": {
-    "test": "node test/*.js"
+    "test": "node test/test.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +26,16 @@
     "xml",
     "yaml",
     "yml"
-  ]
+  ],
+  "dependencies": {
+    "tape": "^4.2.0",
+    "cson-parser": "^1.1.1",
+    "parser-csv": "^0.2.0",
+    "hjson": "^1.7.4",
+    "ini": "^1.3.4",
+    "strip-json-comments": "^1.0.4",
+    "json5": "^0.4.0",
+    "xml2json": "^0.8.2",
+    "js-yaml": "^3.3.1"
+  }
 }
